style: prevents IngredientForm inputs overflowing containing box

--- a/src/components/IngredientForm.module.css
+++ b/src/components/IngredientForm.module.css
@@ -13,11 +13,11 @@
   display: block;
   font-weight: 600;
   color: white;
-  /* margin: 0 0 0.25rem 0; */
-  margin: 0;
+  margin: 0 0 0.25rem 0;
 }
 
 .ingredient-form__field--input {
+  box-sizing: border-box;
   border-radius: var(--border-radius-5);
   border: none;
   width: 100%;
